Notifications page for frontend
